--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.3",
+    "json-server-auth": "^2.1.0",
+    "tailwindcss": "^3.4.18"
   }
 }
