--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:auth": "node server.js"
   },
   "eslintConfig": {
     "extends": [
@@ -38,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
     "tailwindcss": "^3.4.18"
   }
